--- a/tests/test_probesets.ipynb
+++ b/tests/test_probesets.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/oligo-designer-toolsuite/output\n"
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/output\n"
      ]
     }
    ],
@@ -23,8 +23,9 @@
     "sys.path.append(cwd)\n",
     "\n",
     "from oligo_designer_toolsuite.IO._database import CustomDB\n",
-    "from oligo_designer_toolsuite.oligo_selection import ProbesetGenerator\n",
-    "from oligo_designer_toolsuite.oligo_efficiency import PadlockProbeScoring, PadlockSetScoring\n",
+    "from oligo_designer_toolsuite.oligo_selection._generate_probesets_h import ProbesetGenerator as ProbesetGenerator_h\n",
+    "from oligo_designer_toolsuite.oligo_selection._generate_probesets import ProbesetGenerator\n",
+    "from oligo_designer_toolsuite.oligo_efficiency import PadlockProbeScoring, PadlockSetScoring, AverageSetScoring\n",
     "from oligo_designer_toolsuite.oligo_selection import padlock_heuristic_selection\n",
     "from oligo_designer_toolsuite.experiment_specific import PadlockSequenceDesigner\n",
     "\n",
@@ -46,21 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir_annotation = '/home/francesco/Desktop/Work/NCBI'\n",
-    "annotation = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
-    "sequence = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
-    "file_oligos = '/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/specificity_filter/oligo_DB_human_GRCh38.p14_NCBI_release_GCF_000001405.40_gene_transcript.tsv'\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,35 +63,133 @@
       "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:76: UserWarning: Annotation source not specified.\n",
       "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time to process: 2.0250000953674316\n"
-     ]
     }
    ],
    "source": [
+    "dir_annotation = '/home/francesco/Desktop/Work/NCBI'\n",
+    "annotation = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.gtf'\n",
+    "sequence = dir_annotation+'/GCF_000001405.40_GRCh38.p14_genomic.fna'\n",
+    "file_oligos = '/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/specificity_filter/oligo_DB_human_GRCh38_NCBI_release_current_gene_transcript.tsv'\n",
+    "#file_oligos = \"/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/specificity_filter/probes_info.txt\"\n",
+    "\n",
     "database = CustomDB(probe_length_min = 30, probe_length_max = 40, dir_output=dir_output, file_annotation=annotation, file_sequence=sequence)\n",
     "database.read_oligos_DB(format = 'tsv', file_oligos_DB_tsv = file_oligos)\n",
     "#enalrge teh DB\n",
     "genes = list(database.oligos_DB.keys())\n",
-    "for gene in genes:\n",
+    "\"\"\"for gene in genes:\n",
     "    for i in range(1):\n",
-    "        database.oligos_DB[gene+f'_{i}'] = database.oligos_DB[gene]\n",
+    "        database.oligos_DB[gene+f'_{i}'] = database.oligos_DB[gene]\"\"\"\n",
     "padlock_scoring = PadlockProbeScoring(Tm_min = 52, Tm_opt = 60, Tm_max = 67, GC_content_min = 40, GC_content_opt = 50, GC_content_max = 60)\n",
     "set_scoring = PadlockSetScoring()\n",
-    "n_jobs = 12\n",
+    "#set_scoring = AverageSetScoring()\n",
+    "n_jobs = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time to process: 0.37003397941589355\n",
+      "AGRN: 0.8988571428571426, nsets: 40\n",
+      "TTLL10: 0.8430000000000005, nsets: 10\n",
+      "UBE2J2: 0.42571428571428527, nsets: 48\n",
+      "MIB2: 0.4742857142857143, nsets: 100\n"
+     ]
+    }
+   ],
+   "source": [
     "probeset_generator = ProbesetGenerator(probeset_size = 5, \n",
     "                                        min_probeset_size= 2,\n",
     "                                        probes_scoring = padlock_scoring, \n",
-    "                                        heurustic_selection = padlock_heuristic_selection, \n",
     "                                        set_scoring=set_scoring,\n",
+    "                                        heurustic_selection=padlock_heuristic_selection\n",
     "                                    )\n",
     "start = time.time()\n",
-    "database = probeset_generator.apply(database, n_sets=100, n_jobs=5)\n",
-    "print(f'time to process: {time.time() - start}')"
+    "database = probeset_generator.apply(database, n_sets=100, n_jobs=n_jobs)\n",
+    "print(f'time to process: {time.time() - start}')\n",
+    "database.write_probesets(dir_probesets='probesets')\n",
+    "for key in database.probesets.keys():\n",
+    "    print(f\"{key}: {database.probesets[key].iloc[0]['set_score_0']}, nsets: {len(database.probesets[key])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time to process: 27.360677003860474\n",
+      "AGRN: 0.8988571428571426, nsets: 40\n",
+      "TTLL10: 1.0032857142857141, nsets: 72\n",
+      "UBE2J2: 0.40157142857142863, nsets: 100\n",
+      "MIB2: 0.5587142857142859, nsets: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "probeset_generator = ProbesetGenerator_h(probeset_size = 5, \n",
+    "                                        min_probeset_size= 2,\n",
+    "                                        probes_scoring = padlock_scoring, \n",
+    "                                        set_scoring=set_scoring,\n",
+    "                                        sort_ascending=True,\n",
+    "                                    )\n",
+    "start = time.time()\n",
+    "database.read_oligos_DB(format = 'tsv', file_oligos_DB_tsv = file_oligos)\n",
+    "database = probeset_generator.apply(database, n_sets=100, n_jobs=n_jobs, tries = 400, tries_decade=1e-1)\n",
+    "print(f'time to process: {time.time() - start}')\n",
+    "database.write_probesets(dir_probesets='probesets_heuristic')\n",
+    "for key in database.probesets.keys():\n",
+    "    print(f\"{key}: {database.probesets[key].iloc[0]['set_score_0']}, nsets: {len(database.probesets[key])}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "time to process: 7.8144309520721436\n",
+    "AGRN: 0.8988571428571426\n",
+    "TTLL10: 1.0032857142857141\n",
+    "UBE2J2: 0.5674285714285711\n",
+    "MIB2: 0.558714285714285"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False  True  True  True]\n",
+      "[0 2 3 4]\n",
+      "0\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.random.rand(5) > 0.3\n",
+    "print(a)\n",
+    "b = np.where(a)[0]\n",
+    "print(b)\n",
+    "for elem in b:\n",
+    "    print(elem)\n",
+    "print(len(b))"
    ]
   },
   {
@@ -117,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
