--- a/tutorials/padlock_oligo_designer.ipynb
+++ b/tutorials/padlock_oligo_designer.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Padlock Probe Designer\n",
+    "# Padlock Oligo Designer\n",
     "\n",
-    "This notebook implements a pipeline to designe Padlock probes using the `oligo_designer_toolbox` package."
+    "This notebook implements a pipeline to designe Padlock oligos using the `oligo_designer_toolbox` package."
    ]
   },
   {
@@ -32,9 +32,9 @@
    "source": [
     "## Define the parameters\n",
     "\n",
-    "The first thing to do is to define the parameters we want to use to generate the Padlock probes. \n",
+    "The first thing to do is to define the parameters we want to use to generate the Padlock oligos. \n",
     "A possible way to define all the parameters, that is flexible and reusable, is to use a configuration file. \n",
-    "For this toutorial we will use the YAMl file `config/padlock_probe_designer.yaml`, you can have a look to understand which parameters are required and how the configuration file is structured.\n",
+    "For this toutorial we will use the YAMl file `config/padlock_oligo_designer.yaml`, you can have a look to understand which parameters are required and how the configuration file is structured.\n",
     "\n",
     "Once the configuration file has been set up we have to read its content:"
    ]
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_file = \"../config/padlock_probe_designer.yaml\"\n",
+    "config_file = \"../config/padlock_oligo_designer.yaml\"\n",
     "with open(config_file, 'r') as y:\n",
     "    config = yaml.safe_load(y)\n",
     "dir_output = os.path.join(os.path.dirname(os.getcwd()), config[\"dir_output\"]) # create the complete path for the output directory"
@@ -58,9 +58,9 @@
    "source": [
     "## Oligo sequences generation\n",
     "\n",
-    "Now we can start to actually build the pipeline, we will start by generating all the possible probes with length between the maximum and minimum value given belonging to the genes defined in the config file. The probes will be saved in a nested dicionary with the following structure: \n",
+    "Now we can start to actually build the pipeline, we will start by generating all the possible oligos with length between the maximum and minimum value given belonging to the genes defined in the config file. The oligos will be saved in a nested dicionary with the following structure: \n",
     "\n",
-    "[gene][probe_id][probe_feature].\n",
+    "[gene][oligo_id][oligo_feature].\n",
     "\n",
     "\n",
     "For this we need a `CustomOligoDB`, or a class that inherits form it (e.g. `NCBIOligoDB` and `EnsemblOligoDB`) and call the method `create_oligos_DB`. These classes differ on how the the fasta and the gtf filesused to compute the sequences are obtained. The first one oses local files while the others dowload them form the NCBI or Ensambl ftp server."
@@ -72,36 +72,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from oligo_designer_toolsuite.IO import CustomOligoDB, NcbiOligoDB, EnsemblOligoDB\n",
+    "from oligo_designer_toolsuite.database import CustomOligoDB, NcbiOligoDB, EnsemblOligoDB\n",
     "\n",
     "# define the database class\n",
     "if config[\"source\"] == \"ncbi\":\n",
     "    # dowload the fasta files formthe NCBI server\n",
     "    database = NcbiOligoDB(\n",
-    "        probe_length_min=config[\"probe_length_min\"],\n",
-    "        probe_length_max=config[\"probe_length_max\"],\n",
+    "        oligo_length_min=config[\"oligo_length_min\"],\n",
+    "        oligo_length_max=config[\"oligo_length_max\"],\n",
     "        species=config[\"species\"],\n",
     "        annotation_release=config[\"annotation_release\"],\n",
     "        n_jobs=config[\"n_jobs\"],\n",
     "        dir_output=dir_output,\n",
-    "        min_probes_per_gene=config[\"min_probes_per_gene\"],\n",
+    "        min_oligos_per_gene=config[\"min_oligos_per_gene\"],\n",
     "        )\n",
     "elif config[\"source\"] == \"ensembl\":\n",
     "    # dowload the fasta files formthe NCBI server\n",
     "    database = EnsemblOligoDB(\n",
-    "        probe_length_min=config[\"probe_length_min\"],\n",
-    "        probe_length_max=config[\"probe_length_max\"],\n",
+    "        oligo_length_min=config[\"oligo_length_min\"],\n",
+    "        oligo_length_max=config[\"oligo_length_max\"],\n",
     "        species=config[\"species\"],\n",
     "        annotation_release=config[\"annotation_release\"],\n",
     "        n_jobs=config[\"n_jobs\"],\n",
     "        dir_output=dir_output,\n",
-    "        min_probes_per_gene=config[\"min_probes_per_gene\"],\n",
+    "        min_oligos_per_gene=config[\"min_oligos_per_gene\"],\n",
     "        )\n",
     "elif config[\"source\"] == \"custom\":\n",
     "    # use already dowloaded files\n",
     "    database = CustomOligoDB(\n",
-    "        probe_length_min=config[\"probe_length_min\"],\n",
-    "        probe_length_max=config[\"probe_length_max\"],\n",
+    "        oligo_length_min=config[\"oligo_length_min\"],\n",
+    "        oligo_length_max=config[\"oligo_length_max\"],\n",
     "        species=config[\"species\"],\n",
     "        genome_assembly=config[\"genome_assembly\"],\n",
     "        annotation_release=config[\"annotation_release\"],\n",
@@ -110,7 +110,7 @@
     "        file_sequence=config[\"file_sequence\"],\n",
     "        n_jobs=config[\"n_jobs\"],\n",
     "        dir_output=dir_output,\n",
-    "        min_probes_per_gene=config[\"min_probes_per_gene\"],\n",
+    "        min_oligos_per_gene=config[\"min_oligos_per_gene\"],\n",
     "        )\n",
     "\n",
     "# read the genes file\n",
@@ -129,29 +129,29 @@
    "source": [
     "### Dictionary structure\n",
     "\n",
-    "Here is an example of how the nested dictionary is structured. We print a very simple dictionary with 1 probe."
+    "Here is an example of how the nested dictionary is structured. We print a very simple dictionary with 1 oligo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AGRN': {'AGRN_1': {'probe_sequence': Seq('AGTCCCGTCCCCGGCGCGGCCCGCGCGCTCCTCCGCCG'), 'transcript_id': ['NM_001305275.2:XM_005244749.4:XM_011541429.3:NM_198576.4:XM_047419836.1'], 'exon_id': ['NM_001305275.2_exon1:XM_005244749.4_exon1:XM_011541429.3_exon1:NM_198576.4_exon1:XM_047419836.1_exon1'], 'chromosome': '1', 'start': [1020119], 'end': [1020157], 'strand': '+', 'length': 38}}}\n"
+      "{'AGRN': {'AGRN_1': {'oligo_sequence': Seq('AGTCCCGTCCCCGGCGCGGCCCGCGCGCTCCTCCGCCG'), 'transcript_id': ['NM_001305275.2:XM_005244749.4:XM_011541429.3:NM_198576.4:XM_047419836.1'], 'exon_id': ['NM_001305275.2_exon1:XM_005244749.4_exon1:XM_011541429.3_exon1:NM_198576.4_exon1:XM_047419836.1_exon1'], 'chromosome': '1', 'start': [1020119], 'end': [1020157], 'strand': '+', 'length': 38}}}\n"
      ]
     }
    ],
    "source": [
     "gene = \"AGRN\"\n",
-    "probe_id = \"AGRN_1\"\n",
+    "oligo_id = \"AGRN_1\"\n",
     "\n",
     "sample_oligos_DB = {}\n",
     "sample_oligos_DB[gene] = {}\n",
-    "sample_oligos_DB[gene][probe_id] = database.oligos_DB[gene][probe_id]\n",
+    "sample_oligos_DB[gene][oligo_id] = database.oligos_DB[gene][oligo_id]\n",
     "print(sample_oligos_DB)"
    ]
   },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "filters = [masked_sequences, gc_content, melting_temperature, padlock_arms]\n",
     "\n",
     "# initialize the property filter class\n",
-    "property_filter = PropertyFilter(filters=filters, write_genes_with_insufficient_probes=config[\"write_removed_genes\"])\n",
+    "property_filter = PropertyFilter(filters=filters, write_genes_with_insufficient_oligos=config[\"write_removed_genes\"])\n",
     "# filter the database\n",
     "database = property_filter.apply(database=database, n_jobs=config[\"n_jobs\"])\n",
     "# write the intermediate result in a file\n",
@@ -254,7 +254,7 @@
     "\n",
     "Generally, in experiments using DNA sequences one of the main problems that can occur are off-target binding of the oligo sequences designed. To avoid this one can decide to delete all the sequences that also match regions of the DNA outside the gene they belong to.\n",
     "\n",
-    "The classes in the subpackage `oligo_speificity_filters` detect these probes using aligne methods such as Blast and Bowtie and remove them from the database. The currently implemeted classes are: `ExactMatches`, `Blastn`, `Bowtie`, `Bowtie2`, `BowtieSeedRegion`, look at the documentation to understand more in detail their features. As before a second class `SpecificityFilter` takes a list of all the filters we want to apply, and applies them sequentially to the `oligos_DB`. \n",
+    "The classes in the subpackage `oligo_speificity_filters` detect these oligos using aligne methods such as Blast and Bowtie and remove them from the database. The currently implemeted classes are: `ExactMatches`, `Blastn`, `Bowtie`, `Bowtie2`, `BowtieSeedRegion`, look at the documentation to understand more in detail their features. As before a second class `SpecificityFilter` takes a list of all the filters we want to apply, and applies them sequentially to the `oligos_DB`. \n",
     "\n",
     "For our pipeline, we will use `ExactMatches`, `Blastn`, `BowtieSeedRegion`, where for the latter the seed region will be generated with `LigationRegionCreation` (look at the documentation to understand what seed region means).\n",
     "\n",
@@ -267,9 +267,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "# reads processed: 975\n",
+      "# reads with at least one alignment: 975 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 9226 alignments\n",
+      "# reads processed: 529\n",
+      "# reads with at least one alignment: 529 (100.00%)# reads processed: 235\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 994 alignments\n",
+      "\n",
+      "# reads with at least one alignment: 235 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 1970 alignments\n",
+      "# reads processed: 396\n",
+      "# reads with at least one alignment: 396 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 503 alignments\n",
+      "# reads processed: 26\n",
+      "# reads with at least one alignment: 26 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 26 alignments\n",
+      "# reads processed: 395\n",
+      "# reads with at least one alignment: 395 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 441 alignments\n",
+      "# reads processed: 1278\n",
+      "# reads with at least one alignment: 1278 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 1772 alignments\n",
+      "# reads processed: 408\n",
+      "# reads with at least one alignment: 408 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 583 alignments\n",
+      "# reads processed: 1374\n",
+      "# reads with at least one alignment: 1357 (98.76%)\n",
+      "# reads that failed to align: 17 (1.24%)\n",
+      "Reported 3875 alignments\n",
+      "# reads processed: 1580\n",
+      "# reads with at least one alignment: 1580 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 2209 alignments\n"
+     ]
+    }
+   ],
    "source": [
-    "from oligo_designer_toolsuite.IO import CustomReferenceDB\n",
+    "from oligo_designer_toolsuite.database import CustomReferenceDB\n",
     "from oligo_designer_toolsuite.oligo_specificity_filter import (\n",
     "    SpecificityFilter,\n",
     "    ExactMatches,\n",
@@ -305,7 +352,7 @@
     "filters = [exact_mathces, seed_region, blastn]\n",
     "\n",
     "# initialize the specificity filter class\n",
-    "specificity_filter = SpecificityFilter(filters=filters, write_genes_with_insufficient_probes=config[\"write_removed_genes\"])\n",
+    "specificity_filter = SpecificityFilter(filters=filters, write_genes_with_insufficient_oligos=config[\"write_removed_genes\"])\n",
     "# filte r the database\n",
     "database = specificity_filter.apply(oligo_database=database, reference_database=reference_database, n_jobs=config[\"n_jobs\"])\n",
     "# write the intermediate result\n",
@@ -318,34 +365,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Probeset generation\n",
+    "## Oligoset generation\n",
     "\n",
-    "In the next step of the pipeline the probes will be choosen according to their theoretical efficiency in the experiment scope (e.g. how well they bind to the target in the DNA). Each probe will receive a score computed by a class that inherits from `ProbeScoringBase`. Later, the sequences will be organized in sets and a class inheriting from `SetScoringBase` will give a general efficiency score to the set. At the end the best sets will be selected and sored.\n",
+    "In the next step of the pipeline the oligos will be choosen according to their theoretical efficiency in the experiment scope (e.g. how well they bind to the target in the DNA). Each oligo will receive a score computed by a class that inherits from `OligoScoringBase`. Later, the sequences will be organized in sets and a class inheriting from `SetScoringBase` will give a general efficiency score to the set. At the end the best sets will be selected and sored.\n",
     "\n",
-    "It is required that the each array of sequences  contains probes that do not overlap. In fact, if two probes were overlapping, they would compete to bind to the same section of DNA and their efficiency would drop significantly. Therefore, it is extremely important to consider only sets of non-overlapping sequences.\n",
+    "It is required that the each array of sequences  contains oligos that do not overlap. In fact, if two oligos were overlapping, they would compete to bind to the same section of DNA and their efficiency would drop significantly. Therefore, it is extremely important to consider only sets of non-overlapping sequences.\n",
     "\n",
-    "The class `ProbesetGenerator` takes the scoring strategies and tries to find, among all the feasible non-overlapping sets of probes, the sets with the best efficiency scores. These sets will be save in a pandas DataFrame with the following structure:\n",
+    "The class `OligosetGenerator` takes the scoring strategies and tries to find, among all the feasible non-overlapping sets of oligos, the sets with the best efficiency scores. These sets will be save in a pandas DataFrame with the following structure:\n",
     "\n",
     "\n",
-    " probeset_id | probe_0  | probe_1  | probe_2  |  ...  | probe_n  | set_score_1 | set_score_2 |  ...  \n",
+    " oligoset_id | oligo_0  | oligo_1  | oligo_2  |  ...  | oligo_n  | set_score_1 | set_score_2 |  ...  \n",
     "------------ | -------- | -------- | -------- | ----- | -------- | ----------- | ----------- | ------:\n",
     " 0           | AGRN_184 | AGRN_133 | AGRN_832 |  ...  | AGRN_706 | 0.3445      | 1.2332      |  ...  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from oligo_designer_toolsuite.oligo_efficiency import(\n",
-    "    PadlockProbeScoring,\n",
+    "    PadlockOligoScoring,\n",
     "    PadlockSetScoring,\n",
     ")\n",
-    "from oligo_designer_toolsuite.oligo_selection import ProbesetGenerator, padlock_heuristic_selection\n",
+    "from oligo_designer_toolsuite.oligo_selection import OligosetGenerator, padlock_heuristic_selection\n",
     "\n",
     "# initialize the scoring classes\n",
-    "probes_scoring = PadlockProbeScoring(\n",
+    "oligos_scoring = PadlockOligoScoring(\n",
     "    Tm_min=config[\"Tm_min\"],\n",
     "    Tm_opt=config[\"Tm_opt\"],\n",
     "    Tm_max=config[\"Tm_max\"],\n",
@@ -357,21 +404,21 @@
     ")\n",
     "set_scoring = PadlockSetScoring()\n",
     "\n",
-    "# initialize the probeset generator class\n",
-    "probeset_generator = ProbesetGenerator(\n",
-    "    probeset_size=config[\"probeset_size\"], \n",
-    "    min_probeset_size=config[\"min_probeset_size\"],\n",
-    "    probes_scoring=probes_scoring,\n",
+    "# initialize the oligoset generator class\n",
+    "oligoset_generator = OligosetGenerator(\n",
+    "    oligoset_size=config[\"oligoset_size\"], \n",
+    "    min_oligoset_size=config[\"min_oligoset_size\"],\n",
+    "    oligos_scoring=oligos_scoring,\n",
     "    set_scoring=set_scoring,\n",
     "    heurustic_selection=padlock_heuristic_selection,\n",
-    "    write_genes_with_insufficient_probes=config[\"write_removed_genes\"]\n",
+    "    write_genes_with_insufficient_oligos=config[\"write_removed_genes\"]\n",
     ")\n",
     "\n",
-    "# generate the probeset\n",
-    "database = probeset_generator.apply(database=database, n_sets=config[\"n_sets\"], n_jobs=config[\"n_jobs\"])\n",
+    "# generate the oligoset\n",
+    "database = oligoset_generator.apply(database=database, n_sets=config[\"n_sets\"], n_jobs=config[\"n_jobs\"])\n",
     "# write the intermediate result\n",
     "if config[\"write_intermediate_steps\"]:\n",
-    "    database.write_probesets(dir_probesets=\"probesets\")"
+    "    database.write_oligosets(dir_oligosets=\"oligosets\")"
    ]
   },
   {
@@ -381,12 +428,12 @@
    "source": [
     "## Last step\n",
     "\n",
-    "Once the best probesets are generated each experiment design might require (or not) an addtional step. In the case of the Padlock probe designer the last step consists in designing the final padlock probe sequences."
+    "Once the best oligosets are generated each experiment design might require (or not) an addtional step. In the case of the Padlock oligo designer the last step consists in designing the final padlock oligo sequences."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
