--- a/tests/test_loader.ipynb
+++ b/tests/test_loader.ipynb
@@ -33,26 +33,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/francesco/Desktop/Work/oligo-designer-toolsuite'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cwd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -82,6 +62,64 @@
     "\n",
     "loader_ncbi.download_files(\"gtf\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: Padlock Oligo Designer [options]\n",
+      "\n",
+      "Pipeline to designe Padlock oligos. The program supports two ways to recieve the input parameters: \n",
+      "\n",
+      "- command line input\n",
+      "- configuration file (recommended)\n",
+      "\n",
+      "A standard configuration file can be generated using the following command ...\n",
+      "\n",
+      "Since the number of input parameters requested is too high to be handled only through the command line, \n",
+      "the progam will use as baseline the configuration file (it will be automatically generated if it wasn't provided)\n",
+      "and the parameters specified in the command line will be overwritten with the values given.\n",
+      "\n",
+      "REMARK: melting temperature parameters can be given only through the configuration file.\n",
+      "\n",
+      "options:\n",
+      "  -h, --help      show this help message and exit\n",
+      "  -o , --output   path of output directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from argparse import ArgumentParser, RawDescriptionHelpFormatter\n",
+    "\"\"\"Pipeline to designe Padlock oligos. The program supports two ways to recieve the input parameters: \n",
+    "\n",
+    "- command line input\n",
+    "- configuration file (recommended)\n",
+    "\n",
+    "A standard configuration file can be generated using the following command ...\n",
+    "\n",
+    "Since the number of input parameters requested is too high to be handled only through the command line, \n",
+    "the progam will use as baseline the configuration file (it will be automatically generated if it wasn't provided)\n",
+    "and the parameters specified in the command line will be overwritten with the values given.\n",
+    "\n",
+    "REMARK: melting temperature parameters can be given only through the configuration file.\n",
+    "\"\"\"\n",
+    "\n",
+    "# get comman line arguments\n",
+    "parser = ArgumentParser(\n",
+    "    prog=\"Padlock Oligo Designer\",\n",
+    "    usage='%(prog)s [options]',\n",
+    "    description=__doc__,\n",
+    "    formatter_class=RawDescriptionHelpFormatter,\n",
+    ")\n",
+    "parser.add_argument('-o', '--output', help=\"path of output directory\", required=True, type=str, metavar='')\n",
+    "parser.print_help()\n"
+   ]
   }
  ],
  "metadata": {
@@ -100,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
