--- a/tutorials/padlock_oligo_designer.ipynb
+++ b/tutorials/padlock_oligo_designer.ipynb
@@ -146,13 +146,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'MVD': {'MVD_1': {'sequence': Seq('TCCACCTGGTGCACCGCTTCAACGCCCACCACGGGGAC'), 'transcript_id': ['NM_002461.3:XM_011523086.3:XM_011523087.3:XM_011523088.3:XM_011523089.3', 'NM_002461.3:XM_011523086.3:XM_011523088.3:XM_011523087.3:XM_011523089.3'], 'exon_id': ['NM_002461.3_exon8_NM_002461.3_exon7:XM_011523086.3_exon9_XM_011523086.3_exon8:XM_011523087.3_exon10_XM_011523087.3_exon9:XM_011523088.3_exon9_XM_011523088.3_exon8:XM_011523089.3_exon11_XM_011523089.3_exon10', 'NM_002461.3_exon7:XM_011523086.3_exon8:XM_011523088.3_exon8:XM_011523087.3_exon9:XM_011523089.3_exon10'], 'chromosome': '16', 'start': [88654763, 88655373], 'end': [88654801, 88655411], 'strand': '-', 'length': 38}}}\n"
+      "{'CYBA': {'CYBA_1': {'sequence': Seq('ACAGCTGGGCGCTTCACCCAGTGGTACTTTGGTGCCTA'), 'transcript_id': ['NM_000101.4:XM_011522905.4', 'NM_000101.4:XM_011522905.4'], 'exon_id': ['NM_000101.4_exon3_NM_000101.4_exon2:XM_011522905.4_exon3_XM_011522905.4_exon2', 'NM_000101.4_exon2:XM_011522905.4_exon2'], 'chromosome': '16', 'start': [88647131, 88648070], 'end': [88647169, 88648108], 'strand': '-', 'length': 38}}}\n"
      ]
     }
    ],
    "source": [
-    "gene = \"MVD\"\n",
-    "oligo_id = \"MVD_1\"\n",
+    "gene = list(oligo_database.oligos_DB.keys())[0]\n",
+    "oligo_id = list(oligo_database.oligos_DB[gene].keys())[0]\n",
     "\n",
     "sample_oligos_DB = {}\n",
     "sample_oligos_DB[gene] = {}\n",
@@ -472,7 +472,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ODT",
+   "display_name": "oligo",
    "language": "python",
    "name": "python3"
   },
@@ -486,12 +486,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "86424cc144d7f66418c400cc8723471983f4fb4ea1da02307fd3d498c7b104aa"
+    "hash": "7ff94d65164c54a2126c7dc0869520902e3a005d5dddb9f8c3667ad0fd9373c9"
    }
   }
  },
