--- a/tutorials/padlock_oligo_designer.ipynb
+++ b/tutorials/padlock_oligo_designer.ipynb
@@ -64,9 +64,7 @@
     "[gene][oligo_id][oligo_feature].\n",
     "\n",
     "\n",
-    "For this we need a `CustomOligoDB`, or a class that inherits form it (e.g. `NCBIOligoDB` and `EnsemblOligoDB`) and call the method `create_oligos_DB`. These classes differ on how the the fasta and the gtf filesused to compute the sequences are obtained. The first one oses local files while the others dowload them form the NCBI or Ensambl ftp server.\n",
-    "\n",
-    "**Remark:** if the custom configuration file has been changed the fasta and gtf files that uses as default can be dowloaded for the git repositoy only using git-lfs."
+    "For this we need a `CustomOligoDB`, or a class that inherits form it (e.g. `NCBIOligoDB` and `EnsemblOligoDB`) and call the method `create_oligos_DB`. These classes differ on how the the fasta and the gtf filesused to compute the sequences are obtained. The first one oses local files while the others dowload them form the NCBI or Ensambl ftp server."
    ]
   },
   {
@@ -486,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
