--- a/tutorials/padlock_oligo_designer.ipynb
+++ b/tutorials/padlock_oligo_designer.ipynb
@@ -274,6 +274,454 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Settings:\n",
+      "  Output files: \"reference_DB_human_GRCh38_NCBI_release_110_transcripts.fna.*.ebwt\"\n",
+      "  Line rate: 6 (line is 64 bytes)\n",
+      "  Lines per side: 1 (side is 64 bytes)\n",
+      "  Offset rate: 5 (one in 32)\n",
+      "  FTable chars: 10\n",
+      "  Strings: unpacked\n",
+      "  Max bucket size: default\n",
+      "  Max bucket size, sqrt multiplier: default\n",
+      "  Max bucket size, len divisor: 4\n",
+      "  Difference-cover sample period: 1024\n",
+      "  Endianness: little\n",
+      "  Actual local endianness: little\n",
+      "  Sanity checking: disabled\n",
+      "  Assertions: disabled\n",
+      "  Random seed: 0\n",
+      "  Sizeofs: void*:8, int:4, long:8, size_t:8\n",
+      "Input files DNA, FASTA:\n",
+      "  /Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/output/reference/reference_DB_human_GRCh38_NCBI_release_110_transcripts.fna\n",
+      "Reading reference sizes\n",
+      "  Time reading reference sizes: 00:00:00\n",
+      "Calculating joined length\n",
+      "Writing header\n",
+      "Reserving space for joined string\n",
+      "Joining reference sequences\n",
+      "  Time to join reference sequences: 00:00:00\n",
+      "bmax according to bmaxDivN setting: 1696275\n",
+      "Using parameters --bmax 1272207 --dcv 1024\n",
+      "  Doing ahead-of-time memory usage test\n",
+      "  Passed!  Constructing with these parameters: --bmax 1272207 --dcv 1024\n",
+      "Constructing suffix-array element generator\n",
+      "Building DifferenceCoverSample\n",
+      "  Building sPrime\n",
+      "  Building sPrimeOrder\n",
+      "  V-Sorting samples\n",
+      "  V-Sorting samples time: 00:00:00\n",
+      "  Allocating rank array\n",
+      "  Ranking v-sort output\n",
+      "  Ranking v-sort output time: 00:00:00\n",
+      "  Invoking Larsson-Sadakane on ranks\n",
+      "  Invoking Larsson-Sadakane on ranks time: 00:00:00\n",
+      "  Sanity-checking and returning\n",
+      "Building samples\n",
+      "Reserving space for 12 sample suffixes\n",
+      "Generating random suffixes\n",
+      "QSorting 12 sample offsets, eliminating duplicates\n",
+      "Multikey QSorting 12 samples\n",
+      "  (Using difference cover)\n",
+      "  Multikey QSorting samples time: 00:00:00\n",
+      "QSorting sample offsets, eliminating duplicates time: 00:00:00\n",
+      "Calculating bucket sizes\n",
+      "Splitting and merging\n",
+      "  Splitting and merging time: 00:00:00\n",
+      "Split 1, merged 6; iterating...\n",
+      "Splitting and merging\n",
+      "  Splitting and merging time: 00:00:00\n",
+      "Split 1, merged 1; iterating...\n",
+      "Splitting and merging\n",
+      "  Splitting and merging time: 00:00:00\n",
+      "Avg bucket size: 969299 (target: 1272206)\n",
+      "Converting suffix-array elements to index image\n",
+      "Allocating ftab, absorbFtab\n",
+      "Entering Ebwt loop\n",
+      "Getting block 1 of 7\n",
+      "  Reserving size (1272207) for bucket 1\n",
+      "  Calculating Z arrays for bucket 1\n",
+      "  Entering block accumulator loop for bucket 1:\n",
+      "  bucket 1: 10%\n",
+      "  bucket 1: 20%\n",
+      "  bucket 1: 30%\n",
+      "  bucket 1: 40%\n",
+      "  bucket 1: 50%\n",
+      "  bucket 1: 60%\n",
+      "  bucket 1: 70%\n",
+      "  bucket 1: 80%\n",
+      "  bucket 1: 90%\n",
+      "  bucket 1: 100%\n",
+      "  Sorting block of length 1033384 for bucket 1\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1033385 for bucket 1\n",
+      "Getting block 2 of 7\n",
+      "  Reserving size (1272207) for bucket 2\n",
+      "  Calculating Z arrays for bucket 2\n",
+      "  Entering block accumulator loop for bucket 2:\n",
+      "  bucket 2: 10%\n",
+      "  bucket 2: 20%\n",
+      "  bucket 2: 30%\n",
+      "  bucket 2: 40%\n",
+      "  bucket 2: 50%\n",
+      "  bucket 2: 60%\n",
+      "  bucket 2: 70%\n",
+      "  bucket 2: 80%\n",
+      "  bucket 2: 90%\n",
+      "  bucket 2: 100%\n",
+      "  Sorting block of length 1240518 for bucket 2\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1240519 for bucket 2\n",
+      "Getting block 3 of 7\n",
+      "  Reserving size (1272207) for bucket 3\n",
+      "  Calculating Z arrays for bucket 3\n",
+      "  Entering block accumulator loop for bucket 3:\n",
+      "  bucket 3: 10%\n",
+      "  bucket 3: 20%\n",
+      "  bucket 3: 30%\n",
+      "  bucket 3: 40%\n",
+      "  bucket 3: 50%\n",
+      "  bucket 3: 60%\n",
+      "  bucket 3: 70%\n",
+      "  bucket 3: 80%\n",
+      "  bucket 3: 90%\n",
+      "  bucket 3: 100%\n",
+      "  Sorting block of length 1026083 for bucket 3\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1026084 for bucket 3\n",
+      "Getting block 4 of 7\n",
+      "  Reserving size (1272207) for bucket 4\n",
+      "  Calculating Z arrays for bucket 4\n",
+      "  Entering block accumulator loop for bucket 4:\n",
+      "  bucket 4: 10%\n",
+      "  bucket 4: 20%\n",
+      "  bucket 4: 30%\n",
+      "  bucket 4: 40%\n",
+      "  bucket 4: 50%\n",
+      "  bucket 4: 60%\n",
+      "  bucket 4: 70%\n",
+      "  bucket 4: 80%\n",
+      "  bucket 4: 90%\n",
+      "  bucket 4: 100%\n",
+      "  Sorting block of length 695047 for bucket 4\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 695048 for bucket 4\n",
+      "Getting block 5 of 7\n",
+      "  Reserving size (1272207) for bucket 5\n",
+      "  Calculating Z arrays for bucket 5\n",
+      "  Entering block accumulator loop for bucket 5:\n",
+      "  bucket 5: 10%\n",
+      "  bucket 5: 20%\n",
+      "  bucket 5: 30%\n",
+      "  bucket 5: 40%\n",
+      "  bucket 5: 50%\n",
+      "  bucket 5: 60%\n",
+      "  bucket 5: 70%\n",
+      "  bucket 5: 80%\n",
+      "  bucket 5: 90%\n",
+      "  bucket 5: 100%\n",
+      "  Sorting block of length 1209289 for bucket 5\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1209290 for bucket 5\n",
+      "Getting block 6 of 7\n",
+      "  Reserving size (1272207) for bucket 6\n",
+      "  Calculating Z arrays for bucket 6\n",
+      "  Entering block accumulator loop for bucket 6:\n",
+      "  bucket 6: 10%\n",
+      "  bucket 6: 20%\n",
+      "  bucket 6: 30%\n",
+      "  bucket 6: 40%\n",
+      "  bucket 6: 50%\n",
+      "  bucket 6: 60%\n",
+      "  bucket 6: 70%\n",
+      "  bucket 6: 80%\n",
+      "  bucket 6: 90%\n",
+      "  bucket 6: 100%\n",
+      "  Sorting block of length 911841 for bucket 6\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 911842 for bucket 6\n",
+      "Getting block 7 of 7\n",
+      "  Reserving size (1272207) for bucket 7\n",
+      "  Calculating Z arrays for bucket 7\n",
+      "  Entering block accumulator loop for bucket 7:\n",
+      "  bucket 7: 10%\n",
+      "  bucket 7: 20%\n",
+      "  bucket 7: 30%\n",
+      "  bucket 7: 40%\n",
+      "  bucket 7: 50%\n",
+      "  bucket 7: 60%\n",
+      "  bucket 7: 70%\n",
+      "  bucket 7: 80%\n",
+      "  bucket 7: 90%\n",
+      "  bucket 7: 100%\n",
+      "  Sorting block of length 668934 for bucket 7\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:01\n",
+      "Returning block of 668935 for bucket 7\n",
+      "Exited Ebwt loop\n",
+      "fchr[A]: 0\n",
+      "fchr[C]: 1651723\n",
+      "fchr[G]: 3417971\n",
+      "fchr[T]: 5191495\n",
+      "fchr[$]: 6785102\n",
+      "Exiting Ebwt::buildToDisk()\n",
+      "Returning from initFromVector\n",
+      "Wrote 7410254 bytes to primary EBWT file: reference_DB_human_GRCh38_NCBI_release_110_transcripts.fna.1.ebwt\n",
+      "Wrote 848144 bytes to secondary EBWT file: reference_DB_human_GRCh38_NCBI_release_110_transcripts.fna.2.ebwt\n",
+      "Re-opening _in1 and _in2 as input streams\n",
+      "Returning from Ebwt constructor\n",
+      "Headers:\n",
+      "    len: 6785102\n",
+      "    bwtLen: 6785103\n",
+      "    sz: 1696276\n",
+      "    bwtSz: 1696276\n",
+      "    lineRate: 6\n",
+      "    linesPerSide: 1\n",
+      "    offRate: 5\n",
+      "    offMask: 0xffffffe0\n",
+      "    isaRate: -1\n",
+      "    isaMask: 0xffffffff\n",
+      "    ftabChars: 10\n",
+      "    eftabLen: 20\n",
+      "    eftabSz: 80\n",
+      "    ftabLen: 1048577\n",
+      "    ftabSz: 4194308\n",
+      "    offsLen: 212035\n",
+      "    offsSz: 848140\n",
+      "    isaLen: 0\n",
+      "    isaSz: 0\n",
+      "    lineSz: 64\n",
+      "    sideSz: 64\n",
+      "    sideBwtSz: 56\n",
+      "    sideBwtLen: 224\n",
+      "    numSidePairs: 15146\n",
+      "    numSides: 30292\n",
+      "    numLines: 30292\n",
+      "    ebwtTotLen: 1938688\n",
+      "    ebwtTotSz: 1938688\n",
+      "    reverse: 0\n",
+      "Total time for call to driver() for forward index: 00:00:03\n",
+      "Reading reference sizes\n",
+      "  Time reading reference sizes: 00:00:00\n",
+      "Calculating joined length\n",
+      "Writing header\n",
+      "Reserving space for joined string\n",
+      "Joining reference sequences\n",
+      "  Time to join reference sequences: 00:00:00\n",
+      "bmax according to bmaxDivN setting: 1696275\n",
+      "Using parameters --bmax 1272207 --dcv 1024\n",
+      "  Doing ahead-of-time memory usage test\n",
+      "  Passed!  Constructing with these parameters: --bmax 1272207 --dcv 1024\n",
+      "Constructing suffix-array element generator\n",
+      "Building DifferenceCoverSample\n",
+      "  Building sPrime\n",
+      "  Building sPrimeOrder\n",
+      "  V-Sorting samples\n",
+      "  V-Sorting samples time: 00:00:00\n",
+      "  Allocating rank array\n",
+      "  Ranking v-sort output\n",
+      "  Ranking v-sort output time: 00:00:00\n",
+      "  Invoking Larsson-Sadakane on ranks\n",
+      "  Invoking Larsson-Sadakane on ranks time: 00:00:00\n",
+      "  Sanity-checking and returning\n",
+      "Building samples\n",
+      "Reserving space for 12 sample suffixes\n",
+      "Generating random suffixes\n",
+      "QSorting 12 sample offsets, eliminating duplicates\n",
+      "Multikey QSorting 12 samples\n",
+      "  (Using difference cover)\n",
+      "  Multikey QSorting samples time: 00:00:00\n",
+      "QSorting sample offsets, eliminating duplicates time: 00:00:00\n",
+      "Calculating bucket sizes\n",
+      "Splitting and merging\n",
+      "  Splitting and merging time: 00:00:00\n",
+      "Split 1, merged 6; iterating...\n",
+      "Splitting and merging\n",
+      "  Splitting and merging time: 00:00:00\n",
+      "Avg bucket size: 969299 (target: 1272206)\n",
+      "Converting suffix-array elements to index image\n",
+      "Allocating ftab, absorbFtab\n",
+      "Entering Ebwt loop\n",
+      "Getting block 1 of 7\n",
+      "  Reserving size (1272207) for bucket 1\n",
+      "  Calculating Z arrays for bucket 1\n",
+      "  Entering block accumulator loop for bucket 1:\n",
+      "  bucket 1: 10%\n",
+      "  bucket 1: 20%\n",
+      "  bucket 1: 30%\n",
+      "  bucket 1: 40%\n",
+      "  bucket 1: 50%\n",
+      "  bucket 1: 60%\n",
+      "  bucket 1: 70%\n",
+      "  bucket 1: 80%\n",
+      "  bucket 1: 90%\n",
+      "  bucket 1: 100%\n",
+      "  Sorting block of length 827514 for bucket 1\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 827515 for bucket 1\n",
+      "Getting block 2 of 7\n",
+      "  Reserving size (1272207) for bucket 2\n",
+      "  Calculating Z arrays for bucket 2\n",
+      "  Entering block accumulator loop for bucket 2:\n",
+      "  bucket 2: 10%\n",
+      "  bucket 2: 20%\n",
+      "  bucket 2: 30%\n",
+      "  bucket 2: 40%\n",
+      "  bucket 2: 50%\n",
+      "  bucket 2: 60%\n",
+      "  bucket 2: 70%\n",
+      "  bucket 2: 80%\n",
+      "  bucket 2: 90%\n",
+      "  bucket 2: 100%\n",
+      "  Sorting block of length 1010380 for bucket 2\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1010381 for bucket 2\n",
+      "Getting block 3 of 7\n",
+      "  Reserving size (1272207) for bucket 3\n",
+      "  Calculating Z arrays for bucket 3\n",
+      "  Entering block accumulator loop for bucket 3:\n",
+      "  bucket 3: 10%\n",
+      "  bucket 3: 20%\n",
+      "  bucket 3: 30%\n",
+      "  bucket 3: 40%\n",
+      "  bucket 3: 50%\n",
+      "  bucket 3: 60%\n",
+      "  bucket 3: 70%\n",
+      "  bucket 3: 80%\n",
+      "  bucket 3: 90%\n",
+      "  bucket 3: 100%\n",
+      "  Sorting block of length 1237895 for bucket 3\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1237896 for bucket 3\n",
+      "Getting block 4 of 7\n",
+      "  Reserving size (1272207) for bucket 4\n",
+      "  Calculating Z arrays for bucket 4\n",
+      "  Entering block accumulator loop for bucket 4:\n",
+      "  bucket 4: 10%\n",
+      "  bucket 4: 20%\n",
+      "  bucket 4: 30%\n",
+      "  bucket 4: 40%\n",
+      "  bucket 4: 50%\n",
+      "  bucket 4: 60%\n",
+      "  bucket 4: 70%\n",
+      "  bucket 4: 80%\n",
+      "  bucket 4: 90%\n",
+      "  bucket 4: 100%\n",
+      "  Sorting block of length 1119742 for bucket 4\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1119743 for bucket 4\n",
+      "Getting block 5 of 7\n",
+      "  Reserving size (1272207) for bucket 5\n",
+      "  Calculating Z arrays for bucket 5\n",
+      "  Entering block accumulator loop for bucket 5:\n",
+      "  bucket 5: 10%\n",
+      "  bucket 5: 20%\n",
+      "  bucket 5: 30%\n",
+      "  bucket 5: 40%\n",
+      "  bucket 5: 50%\n",
+      "  bucket 5: 60%\n",
+      "  bucket 5: 70%\n",
+      "  bucket 5: 80%\n",
+      "  bucket 5: 90%\n",
+      "  bucket 5: 100%\n",
+      "  Sorting block of length 550342 for bucket 5\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 550343 for bucket 5\n",
+      "Getting block 6 of 7\n",
+      "  Reserving size (1272207) for bucket 6\n",
+      "  Calculating Z arrays for bucket 6\n",
+      "  Entering block accumulator loop for bucket 6:\n",
+      "  bucket 6: 10%\n",
+      "  bucket 6: 20%\n",
+      "  bucket 6: 30%\n",
+      "  bucket 6: 40%\n",
+      "  bucket 6: 50%\n",
+      "  bucket 6: 60%\n",
+      "  bucket 6: 70%\n",
+      "  bucket 6: 80%\n",
+      "  bucket 6: 90%\n",
+      "  bucket 6: 100%\n",
+      "  Sorting block of length 1183879 for bucket 6\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 1183880 for bucket 6\n",
+      "Getting block 7 of 7\n",
+      "  Reserving size (1272207) for bucket 7\n",
+      "  Calculating Z arrays for bucket 7\n",
+      "  Entering block accumulator loop for bucket 7:\n",
+      "  bucket 7: 10%\n",
+      "  bucket 7: 20%\n",
+      "  bucket 7: 30%\n",
+      "  bucket 7: 40%\n",
+      "  bucket 7: 50%\n",
+      "  bucket 7: 60%\n",
+      "  bucket 7: 70%\n",
+      "  bucket 7: 80%\n",
+      "  bucket 7: 90%\n",
+      "  bucket 7: 100%\n",
+      "  Sorting block of length 855344 for bucket 7\n",
+      "  (Using difference cover)\n",
+      "  Sorting block time: 00:00:00\n",
+      "Returning block of 855345 for bucket 7\n",
+      "Exited Ebwt loop\n",
+      "fchr[A]: 0\n",
+      "fchr[C]: 1651723\n",
+      "fchr[G]: 3417971\n",
+      "fchr[T]: 5191495\n",
+      "fchr[$]: 6785102\n",
+      "Exiting Ebwt::buildToDisk()\n",
+      "Returning from initFromVector\n",
+      "Wrote 7410254 bytes to primary EBWT file: reference_DB_human_GRCh38_NCBI_release_110_transcripts.fna.rev.1.ebwt\n",
+      "Wrote 848144 bytes to secondary EBWT file: reference_DB_human_GRCh38_NCBI_release_110_transcripts.fna.rev.2.ebwt\n",
+      "Re-opening _in1 and _in2 as input streams\n",
+      "Returning from Ebwt constructor\n",
+      "Headers:\n",
+      "    len: 6785102\n",
+      "    bwtLen: 6785103\n",
+      "    sz: 1696276\n",
+      "    bwtSz: 1696276\n",
+      "    lineRate: 6\n",
+      "    linesPerSide: 1\n",
+      "    offRate: 5\n",
+      "    offMask: 0xffffffe0\n",
+      "    isaRate: -1\n",
+      "    isaMask: 0xffffffff\n",
+      "    ftabChars: 10\n",
+      "    eftabLen: 20\n",
+      "    eftabSz: 80\n",
+      "    ftabLen: 1048577\n",
+      "    ftabSz: 4194308\n",
+      "    offsLen: 212035\n",
+      "    offsSz: 848140\n",
+      "    isaLen: 0\n",
+      "    isaSz: 0\n",
+      "    lineSz: 64\n",
+      "    sideSz: 64\n",
+      "    sideBwtSz: 56\n",
+      "    sideBwtLen: 224\n",
+      "    numSidePairs: 15146\n",
+      "    numSides: 30292\n",
+      "    numLines: 30292\n",
+      "    ebwtTotLen: 1938688\n",
+      "    ebwtTotSz: 1938688\n",
+      "    reverse: 0\n",
+      "Total time for backward call to driver() for mirror index: 00:00:02\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -470,9 +918,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "oligo",
+   "display_name": "ODT",
    "language": "python",
-   "name": "python3"
+   "name": "odt"
   },
   "language_info": {
    "codemirror_mode": {
@@ -484,7 +932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
