padlock probe pipeline

--- a/tutorials/padlock_probe_designer.ipynb
+++ b/tutorials/padlock_probe_designer.ipynb
@@ -270,9 +270,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "# reads processed: 882\n",
+      "# reads with at least one alignment: 882 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 32902 alignments\n",
+      "# reads processed: 126\n",
+      "# reads with at least one alignment: 126 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 1791 alignments\n",
+      "# reads processed: 2196\n",
+      "# reads with at least one alignment: 2196 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 63683 alignments\n",
+      "# reads processed: 11276\n",
+      "# reads with at least one alignment: 11276 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 304029 alignments\n",
+      "# reads processed: 1211\n",
+      "# reads with at least one alignment: 1211 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 50523 alignments\n",
+      "# reads processed: 0\n",
+      "# reads with at least one alignment: 0 (0.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "No alignments\n",
+      "# reads processed: 0\n",
+      "# reads with at least one alignment: 0 (0.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "No alignments\n",
+      "# reads processed: 0\n",
+      "# reads with at least one alignment: 0 (0.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "No alignments\n",
+      "# reads processed: 0\n",
+      "# reads with at least one alignment: 0 (0.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "No alignments\n",
+      "# reads processed: 0\n",
+      "# reads with at least one alignment: 0 (0.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "No alignments\n"
+     ]
+    }
+   ],
    "source": [
     "from oligo_designer_toolsuite.database import CustomReferenceDB, NcbiReferenceDB, EnsemblReferenceDB\n",
     "from oligo_designer_toolsuite.oligo_specificity_filter import (\n",
@@ -306,6 +353,7 @@
     "    word_size=config[\"word_size\"],\n",
     "    percent_identity=config[\"percent_identity\"],\n",
     "    coverage=config[\"coverage\"],\n",
+    "    strand=config[\"strand\"],\n",
     ")\n",
     "filters = [exact_mathces, seed_region, blastn]\n",
     "\n",
@@ -423,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ODT",
+   "display_name": "oligo",
    "language": "python",
-   "name": "odt"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -437,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:55:37) \n[Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
