update  merfish probe designer

--- a/tutorials/merfish_probe_designer.ipynb
+++ b/tutorials/merfish_probe_designer.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# initialize the property filter class\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -367,12 +367,56 @@
     ")\n",
     "dir_specificity1 = os.path.join(config[\"dir_output\"], \"specificity_temporary1\")\n",
     "\n",
+    "\n",
+    "#first blast against human transcriptome\n",
+    "dir_specificity1 = os.path.join(config[\"dir_output\"], \"specificity_temporary1\")\n",
+    "blast_filter1 = Blastn(\n",
+    "    dir_specificity= dir_specificity1,\n",
+    "    word_size=config[\"primers_blast_setup\"]['blast1_word_size'],\n",
+    "    percent_identity=config[\"percent_identity\"],\n",
+    "    coverage=config[\"coverage\"],\n",
+    "    strand=config[\"strand\"],\n",
+    ")\n",
+    "reference_database1= ReferenceDatabase(\n",
+    "    file_fasta = file_transcriptome,\n",
+    "    files_source = region_generator.files_source,\n",
+    "    species = region_generator.species,\n",
+    "    annotation_release = region_generator.annotation_release,\n",
+    "    genome_assembly = region_generator.genome_assembly,\n",
+    "    dir_output=dir_output\n",
+    ")\n",
+    "reference_database1.load_fasta_into_database()\n",
+    "\n",
+    "\n",
+    "#second blast against 3' end of other primers\n",
+    "dir_specificity2 = os.path.join(config[\"dir_output\"], \"specificity_temporary2\")\n",
     "blast_filter2 = Blastn(\n",
-    "            dir_specificity= self.dir_specificity2,\n",
-    "            word_size=self.config[\"primers_blast_setup\"]['blast2_word_size'],\n",
-    "            percent_identity=self.config[\"percent_identity\"],\n",
-    "            coverage=self.config[\"coverage\"],\n",
-    "        )\n"
+    "    dir_specificity= dir_specificity2,\n",
+    "    word_size=config[\"primers_blast_setup\"]['blast2_word_size'],\n",
+    "    percent_identity=config[\"percent_identity\"],\n",
+    "    coverage=config[\"coverage\"],\n",
+    "    strand=config[\"strand\"],\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "#third blast against 3' end of T7 promoter - Trim T7 to blast word size\n",
+    "dir_specificity3 = os.path.join(config[\"dir_output\"], \"specificity_temporary3\")\n",
+    "blast_filter3 = Blastn(\n",
+    "    dir_specificity= dir_specificity3,\n",
+    "    word_size=config[\"primers_blast_setup\"]['blast3_word_size'],\n",
+    "    percent_identity=config[\"percent_identity\"],\n",
+    "    coverage=config[\"coverage\"],\n",
+    "    strand=config[\"strand\"],\n",
+    ")\n",
+    "\n",
+    "T7_dict=dict()\n",
+    "T7_dict['T7promoter'] = {\"sequence\": Seq(T7promoter[-config[\"primers_blast_setup\"]['blast3_word_size']:])}\n",
+    "#create reference DB with fasta file\n",
+    "fasta_reference_database3 = blast_filter3._create_fasta_file(T7_dict, dir_specificity3, 'T7')\n",
+    "reference_database3= ReferenceDatabase(\n",
+    "    file_fasta = fasta_reference_database3)\n",
+    "reference_database3.load_fasta_into_database()\n"
    ],
    "metadata": {
     "collapsed": false
