--- a/tutorials/merfish_probe_designer.ipynb
+++ b/tutorials/merfish_probe_designer.ipynb
@@ -164,13 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'bc25mer_1': {'bc25mer_1_None:Unknown-Unknown(None)': {'sequence': Seq('TATGAGGACGAATCTCCCGC'), 'chromosome': None, 'start': ['Unknown'], 'end': ['Unknown'], 'strand': None, 'length': 20, 'additional_information_fasta': ['None']}}}\n"
+      "{'bc25mer_1': 'T7CGCCCTCTAAGCAGGAGTAT'}\n"
      ]
     }
    ],
@@ -178,7 +178,10 @@
     "gene = list(oligo_database.database.keys())[0]\n",
     "oligo_id = list(oligo_database.database[gene].keys())[0]\n",
     "\n",
-    "sample_oligos_DB = {gene: {oligo_id: oligo_database.database[gene][oligo_id]}}\n",
+    "sample_oligos_DB = {}\n",
+    "sequence = str(oligo_database.database[gene][oligo_id][\"sequence\"])\n",
+    "sequence = \"T7\" + sequence[::-1]\n",
+    "sample_oligos_DB[gene] =  sequence\n",
     "print(sample_oligos_DB)"
    ],
    "metadata": {
